force-app/main/default/objects/Complaint_Escalation__c/Complaint_Escalation__c.object-meta.xml
<CustomObject>
    <description>Tracks the escalation stages of a grievance if not resolved within defined SLA timelines. Stores escalation levels, dates, and the officials or departments to whom the case was escalated.</description>
    <label>Complaint Escalation</label>
    <nameField>
        <label>Complaint Escalation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Complaint Escalations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>