force-app/main/default/objects/Complaint_Escalation__c/fields/Case_Reference__c.field-meta.xml
<CustomField>
    <fullName>Case_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links escalation back to the related grievance/service request case.</description>
    <inlineHelpText>Links escalation back to the related grievance/service request case.</inlineHelpText>
    <label>Case Reference</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Complaint Escalations</relationshipLabel>
    <relationshipName>Complaint_Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>