force-app/main/default/objects/Complaint_Escalation__c/fields/Escalated_To__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the official  that took over after escalation.</description>
    <inlineHelpText>Identifies the official  that took over after escalation.</inlineHelpText>
    <label>Escalated To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Complaint_Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>