force-app/main/default/objects/Complaint_Escalation__c/fields/Escalated_To_Dept__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To_Dept__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the department that took over after escalation.</description>
    <inlineHelpText>Identifies the department that took over after escalation.</inlineHelpText>
    <label>Escalated To Dept</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Complaint Escalations</relationshipLabel>
    <relationshipName>Complaint_Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>