force-app/main/default/objects/Complaint_Escalation__c/fields/Escalation_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Date__c</fullName>
    <description>Captures when the escalation occurred.</description>
    <inlineHelpText>Captures when the escalation occurred.</inlineHelpText>
    <label>Escalation Date</label>
    <type>DateTime</type>
</CustomField>