force-app/main/default/objects/Complaint_Escalation__c/fields/Escalation_Level__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Level__c</fullName>
    <description>Defines the stage of escalation (first officer, manager, or top authority).</description>
    <inlineHelpText>Defines the stage of escalation (first officer, manager, or top authority).</inlineHelpText>
    <label>Escalation Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>--None--</fullName>
            </value>
            <value>
                <fullName>Level 1 – Officer</fullName>
            </value>
            <value>
                <fullName>Level 2 – Department Manager</fullName>
            </value>
            <value>
                <fullName>Final – Regional Authority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>