force-app/main/default/objects/Complaint_Escalation__c/fields/Resolution_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Deadline__c</fullName>
    <description>New target date for resolution after escalation.</description>
    <inlineHelpText>New target date for resolution after escalation.</inlineHelpText>
    <label>Resolution Deadline</label>
    <type>DateTime</type>
</CustomField>